# GardenEye

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  config.yaml.example  justfile  renovate.json
.github/: renovate.json
.github/workflows/: ci.yml
backend/: README.md  justfile  pyproject.toml
backend/scripts/: analyse_distribution.py  ingest_data.py
backend/src/app/: __init__.py  database.py  main.py  range_stream.py
backend/src/garden_eye/: __init__.py  config.py  helpers.py  log.py
backend/src/garden_eye/api/: __init__.py  database.py  log.py  main.py  range_stream.py
backend/src/garden_eye/scripts/: analyse_distribution.py  annotate.py  ingest_data.py  thumbnail.py
backend/src/scripts/: __init__.py  annotation_prop.py  day_vs_night.py  ingest_data.py
backend/tests/: conftest.py  test_database.py  test_main.py  test_range_stream.py
backend/tests/app/: test_database.py  test_helpers.py  test_main.py  test_range_stream.py
detection/: justfile  pyproject.toml
detection/src/detection/: annotate.py  frame_diff.py  thumbnail.py
detection/tests/: test_annotate.py  test_frame_diff.py
frontend/static/: app.js  index.html  style.css
