[project]
name = "garden-eye"
version = "0.1.0"
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "peewee>=3.18.2",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
ml = [
    "opencv-python>=4.11.0.86",
    "opencv-python-headless>=4.12.0.88",
    "ultralytics>=8.3.195",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.10",
    "types-peewee>=3.18.2.20250710",
    "types-tqdm>=4.67.0.20250809",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.mypy]
disallow_untyped_defs = true
disallow_any_generics = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "S",   # bandit security
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E402",  # imports at top of file
    "S101",  # assert (OK in tests)
    "S603",  # subprocess call (needed for ffmpeg)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.creosote]
exclude-deps = [
    "httpx",
    "uvicorn"
]
