[project]
name = "garden-eye-detection"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/detection"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
disallow_untyped_defs = true
disallow_any_generics = true

[tool.ruff]
lint.select = ["I"]
