[project]
name = "garden-eye-detection"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "garden-eye",
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.10",
    "types-tqdm>=4.67.0.20250809",
]

[tool.uv.sources]
garden-eye = { path = "../backend", editable = true }

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/detection"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
disallow_untyped_defs = true
disallow_any_generics = true

[tool.ruff]
lint.select = ["I"]
