[project]
name = "garden-eye-detection"
version = "0.1.0"
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
    "garden-eye",
    "lightning>=2.5.5",
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "omegaconf>=2.3.0",
    "opencv-python>=4.11.0.86",
    "pyqt6>=6.9.1",
    "pytorchwildlife>=1.2.4.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.10",
    "types-peewee>=3.18.2.20250710",
    "types-tqdm>=4.67.0.20250809",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]

[tool.uv.sources]
garden-eye = { path = "../backend", editable = true }

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/detection"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
disallow_untyped_defs = true
disallow_any_generics = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "S",   # bandit security
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "S101",  # assert (OK in tests)
    "S603",  # subprocess call (needed for ffmpeg)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]
